--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
         "Duane Sibilly <duane.sibilly@ibigroup.com>"
     ],
     "dependencies": {
-        "isotropic-character-fold": "~0.6.0",
-        "isotropic-error": "~0.11.0"
+        "isotropic-character-fold": "~0.7.0",
+        "isotropic-error": "~0.12.0"
     },
     "description": "A configurable natural sorting implementation",
     "devDependencies": {
-        "isotropic-dev-dependencies": "0.0.0"
+        "isotropic-dev-dependencies": "~0.1.0"
     },
     "engines": {
         "node": "^14.15.5",
@@ -38,5 +38,5 @@
         "pretest": "npm run lint",
         "test": "cross-env BABEL_ENV=test nyc --nycrc-path ./node_modules/isotropic-dev-dependencies/config/nyc.json mocha"
     },
-    "version": "0.6.0"
+    "version": "0.7.0"
 }
