--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "description": "A configurable natural sorting implementation",
     "devDependencies": {
+        "eslint": "~9.8.0",
         "isotropic-dev-dependencies": "~0.3.0"
     },
     "engines": {
